scripts/development/m3_stack/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081

static_resources:
  listeners:
  - name: m3aggregator_listener_01
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8888
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: m3aggregator_ingress
          codec_type: AUTO
          http_filters:
          - name: envoy.filters.http.grpc_stats
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              emit_filter_state: true
              stats_for_all_methods: true
              enable_upstream_stats: true
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_agg1
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: m3aggregator_01
                  timeout: 0s
  - name: m3aggregator_listener_02
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8889
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: m3aggregator_ingress
          codec_type: AUTO
          http_filters:
          - name: envoy.filters.http.grpc_stats
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              emit_filter_state: true
              stats_for_all_methods: true
              enable_upstream_stats: true
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_agg1
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: m3aggregator_02
                  timeout: 0s
  - name: m3coordinator_listener_7507
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8507
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: m3coordinator_ingress_7507
          codec_type: AUTO
          http_filters:
          - name: envoy.filters.http.grpc_stats
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              emit_filter_state: true
              stats_for_all_methods: true
              enable_upstream_stats: true
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_coord
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: m3coord7507
                  timeout: 0s
  - name: m3coordinator_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8999
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: m3coordinator_ingress_7201
          codec_type: AUTO
          http_filters:
          - name: envoy.filters.http.grpc_stats
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              emit_filter_state: true
              stats_for_all_methods: true
              enable_upstream_stats: true
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_coord
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: m3coord7201
                  timeout: 0s

  clusters:
  - name: m3aggregator_01
    connect_timeout: 20s
    type: STRICT_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: m3aggregator_01
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: m3aggregator01
                port_value: 6000
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
        - priority: HIGH
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
  - name: m3aggregator_02
    connect_timeout: 20s
    type: STRICT_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: m3aggregator_02
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: m3aggregator02
                port_value: 6000
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
        - priority: HIGH
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
  - name: m3coord7507
    connect_timeout: 20s
    type: STRICT_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
        - priority: HIGH
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
    load_assignment:
      cluster_name: m3coord7507
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: m3coordinator01
                port_value: 7507
  - name: m3coord7201
    connect_timeout: 20s
    type: STRICT_DNS
      #   typed_extension_protocol_options:
      #     envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      #       "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          #        explicit_http_config:
          #          http2_protocol_options: {}
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
        - priority: HIGH
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
    load_assignment:
      cluster_name: m3coord7201
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: m3coordinator01
                port_value: 7201
